# sim0C6A

./: .gitignore  CMakeLists.txt  init_vis.mac  run.mac  sim.cc  vis.mac
Collimateur/: Aluminium.gdml  Brass.gdml  MiniX-CollimateurSubAluminium-Aluminium_1mm.gdml  MiniX-CollimateurSubAluminium-Aluminium_2mm.gdml  MiniX-CollimateurSubAluminium-Aluminium_2mm_rotX180.gdml  MiniX-CollimateurSubAluminium-Aluminium_3mm.gdml  MiniX-CollimateurSubAluminium-Aluminium_3mm_rotX180.gdml  MiniX-CollimateurSubAluminium-Aluminium_4mm.gdml  MiniX-CollimateurSubAluminium-Aluminium_5mm.gdml  MiniX-CollimateurSubLaiton-Brass_1mm.gdml  MiniX-CollimateurSubLaiton-Brass_2mm.gdml  MiniX-CollimateurSubLaiton-Brass_2mm_rotX180.gdml  MiniX-CollimateurSubLaiton-Brass_4mm.gdml  MiniX-CollimateurSubLaiton-Brass_5mm.gdml  MiniX-CollimationSubLaiton-Brass_3mm.gdml  MiniX-CollimationSubLaiton-Brass_3mm_rotX180.gdml  MiniX-TubeXAlumine-DialuminiumTrioxide.gdml  MiniX-TubeXAnodeTungsten-Tungsten.gdml  MiniX-TubeXContenuVideAnode_FenetreSortie-Vacuum.gdml  MiniX-TubeXContenuVideCathode_Anode-Vacuum.gdml  MiniX-TubeXFenetreBeryllium-Beryllium.gdml  SubLaiton-Brass.gdml  TOP.gdml  materials.gdml
Readme/03_02_2026/Version collimateur 5mm Aluminium_Air/: MiniX-CollimateurSubAluminium-Aluminium_5mm_rotX180_Air.gdml  MiniX-CollimateurSubLaiton-Brass_5mm_rotX180_Air.gdml
Readme/03_02_2026/Version collimateur 5mm Aluminium_Brass/: MiniX-CollimateurSubAluminium-Aluminium_5mm_rotX180.gdml  analyse_simulation.C
Readme/03_02_2026/Version collimateur 5mm Aluminium_PMMA/: MiniX-CollimateurSubAluminium-Aluminium_5mm_rotX180_PMMA.gdml  MiniX-CollimateurSubLaiton-Brass_5mm_rotX180.gdml  MiniX-CollimateurSubLaiton-Brass_5mm_rotX180_PMMA.gdml
Readme/07_02_2026/Version2/: synthese_reference_5M.tex
Readme/07_02_2026/Version_Loupe_Compton_Graphite/: assemblage_optimal.tex  loupe_compton_plan.tex
Readme/09_02_2026/Version_Loupe_Compton_Graphite_Version2/: AnalysisManagerSetup.cc  AnalysisManagerSetup.hh  SteppingAction.cc  synthese_photoabs.tex
Readme/09_02_2026/Version_Loupe_Compton_Graphite_Version2/sim0C6/: MiniX-Assembly-Collimation_5.0mm-CollimatorSubAluminium-Aluminium.gdml  MiniX-Assembly-Collimation_5.0mm-CollimatorSubBrass-Brass.gdml  test_loupe_compton.aux  test_loupe_compton.blg  test_loupe_compton.out  test_loupe_compton.tex
Readme/09_02_2026/Version_Loupe_Compton_Graphite_Version2/sim0C6/references/: cone_compton_fig.tex  cone_compton_graphite_concept.tex  synthese_modifications.tex
Readme/12_02_2026/Version_Loupe_Compton_Graphite_Version3/: AnalysisManagerSetup.hh  README_compton_ntuple.md  SteppingAction.cc  analyse_compton_cone.C  ntuple_compton_description.tex
Sauvegarde/07_02_2026/Version3/: DetectorConstruction.cc  DetectorConstruction.hh
include/: ActionInitialization.hh  DetectorMessenger.hh  EventAction.hh  EventMessenger.hh  MyTrackInfo.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorAction0.hh  PrimaryGeneratorAction1.hh  PrimaryGeneratorAction2.hh  PrimaryGeneratorAction3.hh  PrimaryGeneratorMessenger.hh  RunAction.hh  RunMessenger.hh  ScorePlane2SD.hh  ScorePlane3SD.hh  ScorePlane4SD.hh  ScorePlane5SD.hh  ScorePlane6SD.hh  SphereHit.hh  SphereSurfaceSD.hh  SphereSurfaceSDMessenger.hh  SteppingAction.hh  SteppingMessenger.hh  SurfaceSpectrumSD.hh  TrackingAction.hh
save/07_02_2026/Version2/: SurfaceSpectrumSD.cc
src/: ActionInitialization.cc  AnalysisManagerSetup.cc  DetectorMessenger.cc  EventAction.cc  EventMessenger.cc  MyTrackInfo.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorAction0.cc  PrimaryGeneratorAction1.cc  PrimaryGeneratorAction2.cc  PrimaryGeneratorAction3.cc  PrimaryGeneratorMessenger.cc  RunAction.cc  RunMessenger.cc  ScorePlane2SD.cc  ScorePlane3SD.cc  ScorePlane4SD.cc  ScorePlane5SD.cc  SphereHit.cc  SphereSurfaceSD.cc  SphereSurfaceSDMessenger.cc  SteppingMessenger.cc  SurfaceSpectrumSD.cc  TrackingAction.cc
